deployments/bases/artemis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: artemis
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8161
    - name: amqp
      protocol: TCP
      port: 5672
    - name: jxm-rmi
      port: 1198
    - name: jmx
      protocol: TCP
      port: 1199
