deployments/bases/artemis/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: artemis
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /artemis(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: artemis
                port:
                  name: http
